# laps

./: Blacklist.example  INSTALL  Makefile  Makefile.in  README  Revisions  acfortran.m4  aclocal.m4  configure  configure.in  install_laps.csh
data/cdl/: cont.cdl  ctp.cdl  cty.cdl  fsf.cdl  fua.cdl  fua_p.cdl  fua_small.cdl  l1s.cdl  laps.cdl  laps.cwb.cdl  lc3.cdl  lc3_p.cdl  lcb.cdl  lco.cdl  lcp.cdl  lct.cdl  lcv.cdl  lf1.cdl  lfr.cdl  lga.cdl  lga_p.cdl  lga_sigmap.cdl  lgb.cdl  lh3.cdl  lh3_p.cdl  lh4.cdl  lhe.cdl  lil.cdl  liw.cdl  lm1.cdl  lm2.cdl  lmd.cdl  lmr.cdl  lmt.cdl  ln3.cdl  lps.cdl  lq3.cdl  lq3_p.cdl  lrp.cdl  lsr.cdl  (+26 more)
data/static/: Namelist.txt  NexradSite.cfg  NexradSite.sorted  background.nl  balance.nl  bias_coefficients.nl  bound_sh.txt  cie2.txt  cloud.nl  cloud_drift.nl  delta_t.parms  deriv.nl  dprep.nl  exclude.txt  heights.nl  ingest_pro.nl  ingest_rrv.nl  laps2grib.nl  laps2grib.vtab  laps2grib.vtab2  lapsplot.nl  lapsprep.nl  lfmpost.nl  lfmpost_points.txt  ln3.nl  moisture_switch.nl  nest7grid.parms  obs_driver.nl  pressures.nl  public_laps2wfo.tbl  radar.bufrtable  radar_mosaic.nl  rawdata.nl  remap.nl  sat_sounder.nl  satellite_lvd.nl  sfc_qc.nl  sigmas.nl  snd.nl  stmas3d.nl  (+17 more)
etc/: LapsRadar.pl.in  LapsRadar_RSA.pl.in  SendFile2LDM  accountInfo  alb.ncl  albint.ncl  avg.ncl  casererun.pl.in  change-center.pl.in  check_release.csh.in  cloud.pl.in  copyremote.sh  cronfile.pl.in  domain_spc.pl.in  find_files.pl  followup_fcst.pl.in  followup_ncarg_remote.sh  followup_verif.pl.in  fxa.pm  fxalogdir.pl.in  generate_images.pl.in  get_bmng_tile.csh  get_topo1s_tiles.csh  gfs_grib2netcdf.csh.in  hpss_arch.csh  hpss_model_nam.sh  hum3d.pl.in  ingest_stageIV_files.pl.in  laps_driver.pl.in  laps_input_from_archive.pl.in  laps_localization.pl.in  laps_monitor.pl.in  laps_tools.pm  laps_tools.pm.in  ldf.ncl  lfmpost.pl.in  ln_wrf_data.ksh  localize_domain.pl.in  localize_optran.com.in  localize_optran.pl.in  (+58 more)
etc/allsky/: compare_allsky.pro  dscovr_gamma.pro  montage_images
etc/models/: lfmpost_scp_fuafsf.pl.in  lfmpost_test.csh.in  mdlpost.csh.in  mkwrflinks.sh  qsub_lfmpost_fer.sh  qsub_lfmpost_nmm.sh  qsub_lfmpost_psd.sh  qsub_lfmpost_schultz.sh  qsub_lfmpost_tom.sh  qsub_lfmpost_wrf5km.sh  run_fer_qsub_lfmp.sh  run_nmm_qsub_lfmp.sh  run_psd_qsub_lfmp.sh  run_qsub_lfmp.sh  run_qsub_lfmp.sh.in  run_sch_qsub_lfmp.sh  run_tom_qsub_lfmp.sh  run_wrf.csh  run_wrf5km_qsub_lfmp.sh  subset_wrfout.csh.in
etc/verif/: allsky_analysis.csh.in  cloud_analysis.csh.in  cloud_forecast.csh.in  ingest_rerun_verif.csh.in  radar_forecast.csh.in  run_qsub_verif.sh.in  verif_fcst_driver.csh.in  verif_forecast.csh.in
etc/www/: allsky.pro  allsky_cyl.pro  azim.html  cgi-lib.pl  domains.html  fcst.html  fields.html  followup_ensemble.sh  followup_fcst.sh  followup_fcst_xsect.sh  followup_ncarg.sh  frames.html  imgsize.html  laps.cgi.in  laps_products.cgi.in  levels.html  nph-laps.cgi.in  sources.html  thick.html  validtime.html  xsect.html  ysect.html
gui/: README  install_perlTk.sh.in  make_gui.pl.in
gui/guiTk/: ExecuteCommand2.pm  FileDialog.pm  bindtag_demo.pl  srt_bounding_box.pl  srt_demo.pl.in  srt_horiz_editor.pl  srt_localize_domain.pl  srt_vert_editor.pl  ui_controls.pl  ui_domain_srt.pl  ui_initial_data.pl  ui_interp_data.pl  ui_system_tools.pl.in  ui_vars.pl  version
gui/src/: Makefile  create_bcd_bkgnd_xy.c  gen_map_bkgnd.c  location_lines.c  pwrap_ll_xy_convert.c  setsup.c  xy_to_ll.c
src/accum/: Makefile  Makefile.in  README  blend_gauge_data.f  get_precip_accum.f  laps_accum.f  laps_accum_sub.f  precip_barnes_jacket.f  regress_precip.f
src/background/: Makefile  Makefile.in  README  get_bkgd_info.f  gridconv.f  lga.f  lga_interp.f  lga_util.f  lprep_eta_conusc.f  lprep_ruc2_pub.f  readconus211.f  readconusnws.f  readdgprep.f  readeta.f  readnogaps.f  readruc40native.f  readruc60conus.f  readruc60native.f  writelgalgb.f
src/balance/: Makefile  README  balstagger.f  getqbalpe_parms.f  laps.f  lapsio.f  profile.f  put_sfc_bal.f  qbal_utils.f  qbalpe.f  var3dsub.f  writeballaps.f
src/cloud/: Makefile  Makefile.in  README  array_plot.f  barnes_r5.f  compare_analysis_to_rad.f  get_fg_cloud.f  get_istat_39.f  get_sat_data.f  getvis.f  insert_co2ctp.f  insertpireps.f  insertradar.f  insertsao.f  insertsat.f  insertvis.f  laps_cloud.f  laps_cloud_sub.f  read_surface_sa.f  slice.f  spread.f  stats_1d.f
src/compare/: Makefile  Makefile.in  chkdat.pl  compare.f
src/deriv/: Makefile  Makefile.in  README  cloud_deriv_subs.f  fire_fields.f  fireweatherindex.f  hainesindex.f  laps_deriv.f  laps_deriv_sub.f  put_derived_wind_prods.f  rfill_evap.f  schultz.f
src/dprep/: Makefile  dprep.f  dprep.inc  dprep_eta_conusc.f  dprep_laps.f  dprep_ruc2_pub.f
src/ensemble/: Makefile  ensemble_mean.f  ensemble_mean_one.f
src/grid/: Makefile  Makefile.in  README  adjust_geog.f  alt_all.f  bcd_file.c  compute_latlon.f  create_bcd_bkgnd.c  gdswiz_comb.f  gen_egrid_latlon.f  get_gridgen_var.f  get_tile_list.f  getarealim.c  gridgen_model.f  gridgen_utils.f  ll_to_xy.c  map_proj.f  proc_geodat.f  put_laps_static.f  rd_static_attr_sub.f  read_wrfstatic.f  setsup.c  showgrid.f
src/humid/: Makefile  Makefile.crtm  Makefile.in  analq.f  analz_gps.f  analz_gvap.f  analz_snd.f  bias_correction.f  climate_sm.f  cloud_sat.f  correct_gvap_bias.f  func.f  func_o.f  gen_bl_file.f  get_laps_gp.f  get_latest_file.f  get_newest_file.f  get_rad.f  getmapsdf.f  ghbry.f  glsp.f  glst.f  glstd.f  goes_sbn.f  hypso.f  impact_assess.f  int_ipw.f  int_layerpw.f  int_tpw.f  lh3_compress.f  locate.f  lq3_driver1a.f  lq3driver.f  lsin.f  mak_cld_grid.f  make_optran_layers.f  module_sfc_structure.f  moment_b.f  ofm.f  oh_zone.f  (+27 more)
src/include/: CtesMathMeteo.h  Define.h  Functions.h  Structures.h  TV_Algorithms.h  astparms.for  barnesob.inc  bgdata.inc  cloud.inc  comconst  config.h.in  constants.inc  constants_optran.inc  directives.inc  dlatdlon.inc  elcomm.inc  elcons.inc  filter_fnames.inc  geoLib.h  (+81 more)
util/: Makefile  Makefile.in  config.parms  cronfile.in  f77inc.in  fix_net  install-sh
(+1710 files in other folders)
