dnl Process this file with autoconf to produce a configure script.
sinclude(./aclocal.m4)dnl
sinclude(./acfortran.m4)dnl
AC_INIT_LAPS(src/lib/regex.c)
AC_CONFIG_HEADER(src/include/config.h)
dnl
dnl override presets with user input if present
dnl
if test -n "$user_cflags"
then
  CFLAGS="$user_cflags"
fi
if test -n "$user_cflags"
then
  CFLAGS="$user_cflags"
fi
if test -n "$user_fflags"
then
  FFLAGS="$user_fflags"
fi

if test -n "$user_optimize"
then
  OPTIMIZE="$user_optimize"
fi

if test "$prefix" = "NONE" 
then
  prefix=$ac_default_prefix
fi
if test "$datadir" = '${prefix}/share'
then
  datadir="$prefix/data"
fi
echo "Installing data in $datadir"

dnl
dnl Check for host architecture
# 

ARCHIVE="ar"
ANSICFLAGS=$CFLAGS
dnl
dnl guess arch if not set by user
dnl
AC_INIT_ARCH($arch)
AC_PROG_CC
if test "$GCC"
then
  DBFLAGS="-g"
else
  DBFLAGS="-g -C"
fi
dnl guess c compiler if not set by user
dnl if test -z "$CC" 
dnl then
dnl   AC_CHECK_PROGS(CC,xlc cc xlC gcc CC,,$PATH)
dnl fi
dnl
dnl Find path to netcdf ***required by LAPS***
dnl
AC_PROG_GENERIC(NETCDF, ncdump, libnetcdf.a, netcdf.inc)

dnl
dnl Find path to perl  ***required by LAPS***
dnl
AC_CHECK_PROGS(PERL,perl5 perl,,$PATH)
AC_PATH_PROG(PERL,$PERL )

dnl
dnl Find path to csh  ***required by LAPS***
dnl
AC_CHECK_PROGS(CSH,csh,,$PATH)
AC_PATH_PROG(CSH,$CSH )
AC_PROG_GCC_TRADITIONAL

if test "$GCC" 
then
  OTHERLIBS="$OTHERLIBS -lgcc"
  CPPFLAGS = "cc -P"     
fi

LIBPATHFLAG=-L
if test "$arch" = "hpux" 
then
  FFLAGS="$FFLAGS +e +U77 +FPVZO -K" 
  OPTIMIZE="-O"
  LIBPATHFLAG=-Wl,-L
  echo "GCC = $GCC"
  if test -z "$GCC"
  then
      OTHERLIBS="$OTHERLIBS -lm"
      CFLAGS="$CFLAGS -Aa"
      CPPFLAGS="$CPPFLAGS "
  fi
fi
if test "$arch" = "rs6000" 
then
  FFLAGS="$FFLAGS -qfixed"
  OPTIMIZE="-O3 -qstrict"
fi
if test "$arch" = "sun4" 
then
    AC_MSG_ERROR(LAPS no longer supports the sun4 OS)
dnl  FFLAGS="$FFLAGS -native -xl -i4 -fnonstd"
dnl   OPTIMIZE="-O"
fi
if test -z "$FC"
then
  AC_PROG_FC
fi
AC_FC_CPP

AC_FC_INC

AC_FC_BYTE_UNSIGNED
AC_FC_BYTE_SIGNED
AC_FC_INT1
dnl 
dnl Try to figure out if we have an f90 compiler
dnl
grep '90' << EOF
$FC
EOF
if test $? -eq 0 
then
  CPPFLAGS="$CPPFLAGS -DF90"
  if test "$arch" = "solaris"
  then
dnl module flags for solaris 
	FFLAGS="$FFLAGS -M\$(LAPSROOT)/src/lib"
dnl
dnl The solaris cc has a bug in the preprocessor
dnl 
	CPP="/usr/ucb/cc -P"
else
	FFLAGS="$FFLAGS -I\$(LAPSROOT)/src/lib"
fi
fi
AC_F90_FUNC_TRIGD
if test $USE_TRIGD -eq 1 
then
  CPPFLAGS="$CPPFLAGS -DUSE_TRIGD"
fi

# AC_FC_FUNC_GETENV
dnl
dnl AC_FC_NAMES sets WDEF to describe fortran externals to c
dnl
AC_FC_NAMES
CPPFLAGS="$CPPFLAGS $WDEF"
AC_FC_FUNC_IMPLICIT_ALLOC
if test $DYNAMIC -eq 1
then
  CPPFLAGS="$CPPFLAGS -DDYNAMIC"
else
  CPPFLAGS="$CPPFLAGS -DNODYNAMIC"
fi
dnl
dnl How to compile fortran with ncarg?
dnl
AC_FC_FUNC_NCARGFC(NCARGFC)
AC_SUBST(LIBPATHFLAG)
AC_SUBST(CPPFLAGS)
AC_SUBST(PERL)
AC_SUBST(CSH)
AC_SUBST(FFLAGS)
AC_SUBST(OPTIMIZE)
AC_SUBST(OTHERLIBS)
AC_SUBST(ARCHIVE)
AC_SUBST(FC_USE_TRIGD)

dnl Checks for programs.
dnl AC_PROG_AWK


AC_PROG_MAKE_SET
AC_PROG_RANLIB
# AC_PROG_INSTALL
INSTALL='$(LAPSROOT)/util/install-sh'
AC_SUBST(INSTALL)
AC_SUBST(INCLUDE)
AC_SUBST(DBFLAGS)

dnl Checks for libraries.
dnl Replace `main' with a function in -lcurses:
# AC_CHECK_LIB(curses, main)
dnl Replace `main' with a function in -lm:
# AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lnssl:
# AC_CHECK_LIB(nssl, main)
dnl Replace `main' with a function in -ltermcap:
# AC_CHECK_LIB(termcap, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h strings.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
 
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday re_comp regcomp)

#LAPS_PARMS_CONFIG


AC_OUTPUT(src/include/trigd.inc
          src/include/makefile.inc
          util/cronfile
	  etc/LapsRadar.pl
          etc/cloud.pl
          etc/hum3d.pl
          etc/laps_driver.pl
          etc/purger.pl
          etc/sched.pl
          etc/realtime.pl
          etc/ramrsf.pl
          etc/localize_optran.com
	  etc/laps_localization.pl
          etc/sendLAPS.pl
          etc/sfc.pl
          etc/temp.pl
          etc/wfo_post.pl
          etc/wind3d.pl
          etc/window_laps_rt.pl
          etc/xferData.pl)




